# uperf-linux-fork

./: CMakeLists.txt  README.md  README_zh.md  plan.md  toolchain-aarch64.cmake
.github/workflows/: build.yml
config/: dbus-interface.xml  org.uperflinux.Daemon.conf  perapp_powermode  sm8550.json
docs/: DESIGN_DECISIONS.md
gui/: CMakeLists.txt  main.c  main.cpp
gui/include/: dbus_proxy.h
gui/qml/: Main.qml
gui/qml/pages/: Dashboard.qml  Frequency.qml  Games.qml  Settings.qml
gui/src/: dbus_proxy.c
packaging/debian/: control-gui  postinst  postinst-daemon  prerm-daemon
src/: cgroup_manager.c  cli.c  config_parser.c  config_wizard.c  dbus_interface.c  frequency_controller.c  frequency_recovery.c  game_scanner.c  heavyload_detector.c  input_monitor.c  log.c  main.c  mode_selector.c  perapp_config.c  power_model.c  runtime_backend.c  state_machine.c  sysfs_writer.c  task_scheduler.c  thermal.c
src/include/: cgroup_manager.h  config.h  dbus_interface.h  frequency_controller.h  (+10 more)
systemd/: uperf-linux.service
tests/: golden_trace.c  golden_trace.h  test_config_parser.c  test_daemon_recovery.c  test_daemon_reload.c  test_dbus_interface.c  test_dbus_xml_guard.c  test_frequency_controller.c  test_frequency_recovery.c  test_frequency_state_corruption.c  test_game_scanner.c  test_heavyload_detector.c  test_input_monitor.c  test_mode_selector.c  test_perapp_config.c  test_power_model.c  test_runtime_backend.c  test_state_machine.c  test_sysfs_fault_injection.c  test_sysfs_writer.c  test_task_scheduler.c  test_thermal.c
tools/: validate-frequency-hardware.sh
(+5 files in other folders)
